# AnthropicNotification

./: .gitignore  CODEBUDDY.md  README.md  README_EN.md  pyproject.toml  requirements.txt
.codebuddy/: settings.json
.codebuddy/commands/category/: add.md
.codebuddy/commands/formatter/: add.md
.codebuddy/commands/opsx/: apply.md  archive.md  explore.md
.codebuddy/hooks/: ci-status.sh  openspec-guard.sh  tdd-autotest.sh  tdd-guard.sh
.codebuddy/skills/category-add/: SKILL.md
.codebuddy/skills/formatter-add/: SKILL.md
.codebuddy/skills/openspec-apply-change/: SKILL.md
.codebuddy/skills/openspec-archive-change/: SKILL.md
.codebuddy/skills/openspec-explore/: SKILL.md
.codebuddy/skills/tdd-apply/: SKILL.md
.githooks/: commit-msg
.github/workflows/: monitor.yml
openspec/changes/add-dingtalk-formatter/: tasks.md
openspec/changes/bilingual-readme/: design.md  tasks.md
openspec/changes/bugfix-label-and-logging/: design.md  proposal.md
openspec/changes/category-add-skill/: proposal.md
openspec/changes/ci-status-hook/: design.md
openspec/changes/enhance-archive-and-guards/: design.md  proposal.md
openspec/changes/enhance-wechat-work-formatter/: proposal.md
openspec/changes/formatter-add-skill/: design.md  (+2 more)
src/: detector.py  enrichment.py  issues.py  main.py  notifier.py  sitemap.py
src/formatters/: _template.py  dingtalk.py  wechat_work.py
tests/: test_detector.py  test_enrichment.py  test_issues.py  test_main.py  test_notifier.py  test_sitemap.py  test_smoke.py
tests/formatters/: _template_test.py  test_dingtalk.py  test_wechat_work.py
(+43 files in other folders)
