[project]
name = "anthropic-notification"
version = "0.1.0"
description = "Monitor Anthropic website for updates and send webhook notifications"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
